gearset/main/default/objects/Contact/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Account2)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>