gearset/main/default/objects/Contact/fields/AccountCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountCreatedDate__c</fullName>
    <formula>Account.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountCreatedDate</label>
    <type>Date</type>
</CustomField>