gearset/main/default/objects/Contact/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalId>true</externalId>
    <label>external id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>