gearset/main/default/objects/Contact/fields/Primary_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Department Members</relationshipLabel>
    <relationshipName>Department_Members</relationshipName>
    <type>Lookup</type>
</CustomField>