gearset/main/default/objects/Contact/fields/Primary_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Primary_Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Institution Members</relationshipLabel>
    <relationshipName>Institution_Members</relationshipName>
    <type>Lookup</type>
</CustomField>